--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,8 @@ dependencies:
   intl: ^0.16.1
   provider: ^4.3.2
   badges: ^1.1.1
+  http: ^0.12.2
+  cached_network_image: ^2.2.0+1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
