--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   http: ^0.12.2
   cached_network_image: ^2.2.0+1
   shared_preferences: ^0.5.8
+  image_picker: ^0.6.7+4
+  path_provider: ^1.6.11
+  path: ^1.7.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
